--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: naqsh2021.github.com
+  github: naqsh2021
   instagram:
   linkedin:
   pinterest:
