--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: نَقش!
 
 # وصف قصير للمدونة والذي سيظهر تحت اسمها وكجزء من عنوان المدونة في محركات البحث
-description: الخلاصة في صور، كالنقش على حجر
+description: كالنقش على حجر
 
 # رابط صورة المدونة
 # لإستخدام صورة هويتك في GitHub ضع https://github.com/<اسم_المستخدم>.png في المتغير، مثلا لهويتي الشخصية أستخدم:
